// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RequestStatusCell renders with "approved" status 1`] = `
<span
  className="badge badge-secondary"
>
  Approved
</span>
`;

exports[`RequestStatusCell renders with "declined" status 1`] = `
<span
  className="badge badge-light"
>
  Declined
</span>
`;

exports[`RequestStatusCell renders with "requested" status 1`] = `
<span
  className="badge badge-primary"
>
  Requested
</span>
`;
